# markdown-mermaid

./: .gitignore  markdown_mermaid.py  pyproject.toml  readme.md
